# pickle-reactor

./: .dockerignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE1_COMPLETE.md  PHASE6_COMPLETE.md  PLAN.md  PLANNING_AND_PROGRESS.md  README.md  RESEARCH.md  fly.toml  pickle-reactor  pyproject.toml
docs/: getting-started.md
pages/: about.py  index.py  todos.py
server/: actions.py  app.py  ssr.py
shared/: state.py  vdom.py
src/pickle_reactor/: __init__.py  cli.py
static/: bootstrap.js  client_actions.py  client_runtime.py  pages_about.py  pages_dashboard.py
tests/e2e/: E2E_TESTING_GUIDE.md  conftest.py  test_phase1_browser.py
tests/integration/: test_actions.py  test_server.py  test_server_routing.py
tests/unit/: test_actions_validation.py  test_patch.py  test_routing.py  test_ssr.py  test_state.py  test_vdom.py
