[project]
name = "pickle-reactor"
version = "0.1.0"
description = "Next.js-style Python framework using Pyodide and VDOM"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "bitnom", email = "14287229+bitnom@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "playwright>=1.40.0",
    "ruff>=0.1.0",
]

[project.scripts]
pickle-reactor = "pickle_reactor:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "unit: Pure Python unit tests (fast)",
    "integration: Integration tests with external services (moderate)",
    "e2e: End-to-end browser tests (slow)",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
